# HPOD

./: .gitattributes  CMakeLists.txt  README.md  dataplot.mlx  ground_track.m  input.txt  main
C++/: .gitignore  3d.gnu  CMakeLists.txt  Coordinate.cpp  Coordinate.h  ECEF.txt  ECI.txt  GEO.txt  Makefile  Orbit.cpp  Orbit.h  README.md  Time.cpp  Time.h  \  dataplot.mlx  input.txt  main  main.cpp  notes.norg  output.txt  q.txt
C++/docs/: notes.norg
C++/include/: accel.h  coordinate.h  dm_time.h  input.h  propagator.h  util_maths.h
C++/include/accel/: accel.h
C++/include/time/: time.h
C++/plot/: 3d.gnu  earth.gnu
C++/plot/matlab_plot/: dataplot.m  plot_globe.m
C++/src/: accel.cpp  coordinate.cpp  dm_time.cpp  input.cpp  main.cpp  optimiser.cpp  propagator.cpp  rk45.cpp  util_maths.cpp
C++/src/Coordinate/: Coordinate.cpp
C++/src/Orbit/: Orbit.cpp
C++/src/Time/: Time.cpp
C++/src/accel/: EGM96_data.h  accel.cpp
C++/src/utils/: input.cpp  rk45.cpp
C++/verification data/: dm_format.txt
MATLAB/: EoM.m  orbit_deter.m  orbit_test.mlx
docs/notes/: include.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
docs/notes/orbit_basic/: orbit_basic.tex
docs/notes/perturbation/: perturbation.tex
include/: propagator.h
include/utils/: input.h  rk45.h
plot/: 3d.gnu
src/: main.cpp  propagator.cpp
src/Coordinate/: Coordinate.cpp  Coordinate.h
src/Orbit/: Orbit.cpp  Orbit.h
src/Potential/: JGM3.h  Potential.h  accel.cpp  accel.h
src/Time/: Time.cpp  Time.h
src/accel/: Potential.cpp  accel.cpp
src/utils/: input.cpp  rk45.cpp
verification data/: dm_format.txt
